--- a/c5e4_params/autopong.html
+++ b/c5e4_params/autopong.html
@@ -7,13 +7,15 @@
         <button id="start">start</button>
         <button id="stop">stop</button>
         <div class="slidecontainer">
-          <input type="range" min="1" max="500" value="3" class="slider" id="rango">
-          <input type="range" min="1" max="500" value="3" class="slider" id="rango2">
+          <input type="range" min="1" max="500" value="3" class="slider" id="rango" disabled>
+          <input type="range" min="1" max="500" value="3" class="slider" id="rango2" disabled>
+          <input type="range" min="1" max="5000" value="1000" class="slider" id="rango3">
         </div>
         <canvas id="circulo" width=700 height=700></canvas>
         <script>
             let variable=100;
             let variable2=100;
+            let variable3=1000;
             let note;
             let canvas = document.getElementById("circulo")
             let ctx = canvas.getContext("2d")
@@ -22,8 +24,10 @@
             let x, y, dx, dy;
             let bgColors = ["rgba(200,50,200,.03)", "rgba(20,250,200,.03)", "rgba(20,50,10,.03)", "rgba(230,150,20,.03)", "rgba(50,50,200,.03)"]
             let bgColorIndex = 0
-            let synthNotes = ["C", "D", "A"]
+            let synthNotes = ["F", "D", "A"]
+            let synthChords = [ ["C", "E", "G"] , ["F", "D", "A"], ["C","D","F"] ]
             let synthNoteIndex = 0
+            let automata = null //interval para automatización del todo
 
             function init(){
                 dx = 5 - (Math.random() * 10)
@@ -32,10 +36,25 @@
                 if (dx<1 && dx>-1) dx=1
                 if (dy<1 && dy>-1) dy=1
                 x=Math.random()*canvas.offsetWidth; y=Math.random()*100
+
+                automata = setInterval(()=>{ 
+                    slider.value = Math.random()*800
+                    slider2.value = Math.random()*800
+                    variable = slider.value
+                    variable2 = slider2.value
+                }, variable3)
+            }
+            function windChanged() {
+                bgColorIndex++
+                synthNoteIndex++
+                chorus.depth     = Math.random()*0.9
+                chorus.delayTime = Math.random()*2.5
+                if (bgColorIndex >= bgColors.length) bgColorIndex=0
+                if (synthNoteIndex >= synthNotes.length) synthNoteIndex=0
             }
             function draw() {
                 ctx.fillStyle = bgColors[bgColorIndex]
-                if (i % 100 < 0.5) ctx.fillRect(0, 0, canvas.width, canvas.height); 
+                if (i % 10 < 0.5) ctx.fillRect(0, 0, canvas.width, canvas.height); 
 
                 ctx.fillStyle = `rgba(${variable2/5},100,${variable/10},0.9)`;
                 sw = (variable/14) + 3
@@ -45,29 +64,29 @@
                 
                 if (x+sw > canvas.offsetWidth || x < 0) { 
                     dx *= -1
-                    bgColorIndex++
-                    synthNoteIndex++
+                    windChanged()
                 }
                 if (y+sh > canvas.offsetHeight || y < 0) {
                     dy *= -1
-                    bgColorIndex++
-                    synthNoteIndex++
+                    windChanged()
                 }
-                if (bgColorIndex >= bgColors.length) bgColorIndex=0
-                if (synthNoteIndex >= synthNotes.length) synthNoteIndex=0
+
                 
                 ctx.fillRect(x, y, sw, sh)
 
                 const newNote = `${synthNotes[synthNoteIndex]}${variable2/100}`
-                // osc.frequency.rampTo(newValue,.4);
-                // osc.phase = i+variable;
+                const newChord = [  `${synthChords[synthNoteIndex][0]}${variable2/100}`,
+                                    `${synthChords[synthNoteIndex][1]}${variable2/100}`,
+                                    `${synthChords[synthNoteIndex][2]}${variable2/100}`]
 
                 // if (i % (variable2/50) < 0.5) synth.triggerAttackRelease(`${synthNotes[synthNoteIndex]}${variable2/100}`, variable/50);
-                if (i % 100 < 0.5) synth.triggerAttackRelease(newNote, variable/50);
-
-                console.log("starting with ", newNote);
+                if (i % 10 < 0.5) {
+                    // synth.triggerAttackRelease(newNote, variable/50);
+                    psynth.triggerAttackRelease(newNote, variable/50);
+                }
+                // console.log("starting with ", newNote);
                 // osc.start();
-                i = i+10;
+                i++
             }
 
             var slider = document.getElementById("rango");
@@ -79,20 +98,27 @@
             slider2.oninput = function() {
                 variable2 = this.value;
             }
-
-            setInterval(()=>{ 
-                slider.value = Math.random()*800
-                slider2.value = Math.random()*800
-                variable = slider.value
-                variable2 = slider2.value
-            }, 1000)
-
-            const osc = new Tone.Oscillator("D4").toDestination();//.start().toDestination();
-            const synth = new Tone.MembraneSynth().toDestination();
+            var slider3 = document.getElementById("rango3");
+            slider3.oninput = function() {
+                variable3 = this.value;
+            }
+            // const osc = new Tone.Oscillator("D4").toDestination();//.start().toDestination();
+            const synth = new Tone.MembraneSynth().toDestination()
+            const chorus = new Tone.Chorus(4, 2.5, 0.5).toDestination().start()
+            const psynth = new Tone.PolySynth().connect(chorus)
 
 
-            document.getElementById('start')?.addEventListener('click', async () => {init(); interval = setInterval(draw,100);} )
-            document.getElementById('stop')?.addEventListener('click', async () => {osc.stop(0); clearInterval(interval);} )
+            document.getElementById('start')?.addEventListener('click', async () => {
+                init()
+                interval = setInterval(draw,100)
+                slider3.disabled = true
+            } )
+            document.getElementById('stop')?.addEventListener('click', async () => {
+                // osc.stop(0)
+                clearInterval(interval)
+                clearInterval(automata)
+                slider3.disabled = false
+            } )
         </script>
     </body>
 </html>
