--- a/c5e4_params/aliendvd3.html
+++ b/c5e4_params/aliendvd3.html
@@ -41,11 +41,19 @@
             padding-top: 10px;
             background-color: #0005;
         }
+
+        .everything {
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            transform: translate(-50%,-55%);
+            left: 50%;
+        }
     </style>
 </head>
 
 <body>
-    <div style="text-align: center;">
+    <div class="everything">
         <!-- <div class="controls"> -->
         <button id="start">∔↬</button>
         <button id="stop" disabled>∔◌⠃</button>
