--- a/c5e4_params/aliendvd4.html
+++ b/c5e4_params/aliendvd4.html
@@ -4,8 +4,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.37/Tone.js"
         integrity="sha512-gK8OnTXn8cTYkHqYX+bhzjQ1rClAPuG2eMy+oRuV26mSuE0EbZeULFKdyc/YGX1Z/JsC06FXxQttdX4aahjSMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="shortcut icon" href="favicon-16x16.png">
+
     <title>yet another broken meditation machine</title>
-    <meta name="author" content="Luis Toledo | digitalcthulhu">
+    <meta name="author" content="Luis Toledo | @digitalcth | https://luistoledo.neocities.org">
     <style>
         body {
             color: black;
@@ -86,7 +88,7 @@
         <br>
         <canvas id="canvas" class="canvas_border" width=600 height=600></canvas>
         <br>
-        <a target="_blank" href="glitch.com/edit/#!/chief-stealth-adjustment?path=c5e4_params%2Faliendvd3.html">.⛶𑁊🮎⠃</a>
+        <a target="_blank" href="https://glitch.com/edit/#!/chief-stealth-adjustment?path=c5e4_params%2Faliendvd4.html">.⛶𑁊🮎⠃</a>
     </div>
 
     
@@ -250,7 +252,7 @@
             if (dx < 1 && dx > -1) dx = 1.3
             if (dy < 1 && dy > -1) dy = 1.3
             // por si se pierde
-            if (distanceFromCenter(x,y) > W2 + 30) {
+            if (distanceFromCenter(x,y) > W2 + 30 || x<0 || x>W || y<0 || y>H) {
                 x =  W4 - (Math.random()*W2)
                 y =  H4 - (Math.random()*H2)
             }
@@ -271,7 +273,6 @@
 
         // map and constrain from https://github.com/processing/p5.js/blob/b7815320e5e51a005fcc5a71cb0c9bf10553a008/src/math/calculation.js
         function map(n, start1, stop1, start2, stop2, withinBounds) {
-            // p5._validateParameters('map', arguments);
             const newval = (n - start1) / (stop1 - start1) * (stop2 - start2) + start2;
             if (!withinBounds) {
                 return newval;
